Se finalizan los tests de categories y products